styles.css
:root{
    --rad: .7rem;
    --color-dark: #2f2f2f;
    --color-light: rgb(255, 255, 255);
    --height: 2rem;
    --font-family: 'Inter', sans-serif;
}

*, html{
    margin: 0px;
    padding: 0px;
    
}

.container{
    display: grid;
    grid-template-columns: 1fr 4fr;
    gap: 4px;
    margin: 0px;
    height: 100vh;
    overflow: hidden;
}

.main{
    grid-column: 2/3;
    grid-row: 1/2;
    display: flex;
    flex-flow: column;
    overflow: hidden;

}

.main-content{
  display: grid;
  grid-template-rows: 1fr 4fr;
  /* gap: 1.5rem; */
  /* padding: 5px; */
}

.top{
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  gap: 20px;
  align-items: center;
  height: fit-content;
  grid-row: 1/2;
  padding-bottom: 20px;
}

.content{
  display: grid;
  grid-template-rows: 1fr 3fr;
  border-radius: 1rem;
  border: solid;
  margin: 10px;
}

.content-top{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 1rem;
  padding-right: 1rem;
}

.small-r{
  grid-row: 1/2;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  padding: 5px;
  gap: 1.5rem;
}

.large-r{
  grid-row: 2/3;
  display: grid;
  height: fit-content;
  justify-content: center;
}

.graph{
  display: flex;
  flex-flow:column;
  margin: 10px;
  border: solid;
  border-radius: 1rem;
  margin: 10px;
}

.summary{
  display: flex;
  padding: 10px;
}

.graph-chart{
  display: flex;
}

.jobs{
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
  padding: 0px 10px 10px;
}

.number{
  font-size: 3rem;
}

.job-1{
  color: rgb(59 130 246);
}

.job-2{
 color: rgb(239 68 68);
}

.job-3{
 color: rgb(245 158 11);
}

.job-4{
  color: rgb(34 197 94);
}

.notifications{
  grid-row: 1/2;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  gap: 10px;
  padding: 5px;
}

.bottom{
  grid-row: 2/3;
  display: flex;
  flex-flow: row;
  align-items: flex-start;
  gap: 10px;
  padding-left: 15px;
}

.sidebar{
    display: grid;
    justify-content: center;
    align-items: center;
    grid-column: 1/2;
    padding: 30px;
    background-color: #1e293b;
    color: #F9FAFB;
    font-size: 1.1em;
    width: 15vw;
}

.sidebar::-webkit-scrollbar {
  width: 5px;
}

.sidebar::-webkit-scrollbar-thumb {
  background-color: #d9d9d9;
  border-radius: 20px;
}

.logo{
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url(./views/charlesdeluvio-Mv9hjnEUHR4-unsplash.jpg);
    background-size: 100%;
    background-repeat: no-repeat;
    background-position: center;
    width: 140px;
    height: 140px;
    border-radius: 50%;
    border-style: solid;
}

.picture{
    display: flex;
    justify-content: center;
    padding-bottom: 20px;
    /* border-bottom: 3px solid #d9d9d9; */
}

.side-content{
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: flex-start;
    padding-bottom: 35px;
    padding-left: 20px;
    gap: 5px;
}

.list-item{
  display: grid;
  grid-template-columns: 1fr 3fr;
  flex-flow: nowrap;
  width: 90%;
  padding: 5px;
  gap: 4px;
}

.image{
  display: flex;
  justify-content: left;
  align-items: center;
  grid-column: 1/2;
}

.link{
  display: flex;
  justify-content: flex-start;
  grid-column: 2/3;
}

.first{
  padding-top: 20px;
}

.list-item a{
    text-decoration: none;
    color: inherit;
}

.list-item:hover{
    cursor: pointer;
    background-color: #36455f;
    border-radius: 5px;
}

div h1{
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--font-family);
}

.headline{
  display: grid;
  grid-template-columns: 1fr 3fr;
  justify-content: center;
  align-items: center;
}

.fa{
    padding: 8px;
    margin: 0;
}

.notification-button{
  display: flex;
  /* width: 20px; */
  height: auto;
}

.fa:hover{
  cursor: pointer;
}

.pic{
  display: flex;
  justify-content: center;
  align-items: center;
}

.small-headline{
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  align-items: center;
  gap: 5px;
}

.profile-picture{
    background-image: url(./views/charlesdeluvio-Mv9hjnEUHR4-unsplash.jpg);
    background-size: cover;
    background-position: center;
    width: 80px;
    height: 80px;
    border-radius: 50%;
}

.search-bar{
    display: flex;
}

.search-bar input,
.search-btn, 
.search-btn:before, 
.search-btn:after {
  transition: all 0.25s ease-out;
}
.search-bar input,
.search-btn {
  width: 3em;
  height: 3em;
}
.search-bar input:invalid:not(:focus),
.search-btn {
  cursor: pointer;
}
.search-bar,
.search-bar input:focus,
.search-bar input:valid  {
  width: 100%;
}
.search-bar input:focus,
.search-bar input:not(:focus) + .search-btn:focus {
  outline: transparent;
}
.search-bar {
  margin: auto;
  padding: 0.5em;
  justify-content: right;
  max-width: 30em;
}
.search-bar input {
  background: transparent;
  border-radius: 1.5em;
  box-shadow: 0 0 0 0.4em #171717 inset;
  padding: 0.75em;
  transform: translate(0.5em,0.5em) scale(0.5);
  transform-origin: 100% 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
.search-bar input::-webkit-search-decoration {
  -webkit-appearance: none;
}
.search-bar input:focus,
.search-bar input:valid {
  background: #fff;
  border-radius: 0.375em 0 0 0.375em;
  box-shadow: 0 0 0 0.1em #d9d9d9 inset;
  transform: scale(1);
}
.search-btn {
  background: #171717;
  border-radius: 0 0.75em 0.75em 0 / 0 1.5em 1.5em 0;
  padding: 0.75em;
  position: relative;
  transform: translate(0.25em,0.25em) rotate(45deg) scale(0.25,0.125);
  transform-origin: 0 50%;
}
.search-btn:before, 
.search-btn:after {
  content: "";
  display: block;
  opacity: 0;
  position: absolute;
}
.search-btn:before {
  border-radius: 50%;
  box-shadow: 0 0 0 0.2em #f1f1f1 inset;
  top: 0.75em;
  left: 0.75em;
  width: 1.2em;
  height: 1.2em;
}
.search-btn:after {
  background: #f1f1f1;
  border-radius: 0 0.25em 0.25em 0;
  top: 51%;
  left: 51%;
  width: 0.75em;
  height: 0.25em;
  transform: translate(0.2em,0) rotate(45deg);
  transform-origin: 0 50%;
}
.search-btn span {
  display: inline-block;
  overflow: hidden;
  width: 1px;
  height: 1px;
}

/* Active state */
.search-bar input:focus + .search-btn,
.search-bar input:valid + .search-btn {
  background: #2762f3;
  border-radius: 0 0.375em 0.375em 0;
  transform: scale(1);
}
.search-bar input:focus + .search-btn:before, 
.search-bar input:focus + .search-btn:after,
.search-bar input:valid + .search-btn:before, 
.search-bar input:valid + .search-btn:after {
  opacity: 1;
}
.search-bar input:focus + .search-btn:hover,
.search-bar input:valid + .search-btn:hover,
.search-bar input:valid:not(:focus) + .search-btn:focus {
  background: #0c48db;
}
.search-bar input:focus + .search-btn:active,
.search-bar input:valid + .search-btn:active {
  transform: translateY(1px);
}

